--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.2.8",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-pager-view": "6.3.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/lodash": "^4.17.10",
     "@types/react": "~18.2.45",
     "typescript": "^5.1.3"
   },
