--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
