--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@google-cloud/datastore": "^9.1.0",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-firebase/app": "^21.0.0",
     "@react-native-firebase/auth": "^21.0.0",
     "@react-native-firebase/firestore": "^21.0.0",
@@ -18,18 +18,18 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.3.0",
-    "expo": "~51.0.28",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.9",
+    "expo-status-bar": "~2.0.0",
     "firebase": "^10.14.1",
     "lodash": "^4.17.21",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
+    "react": "18.3.1",
+    "react-native": "0.76.2",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-pager-view": "6.3.0",
+    "react-native-pager-view": "6.5.1",
     "react-native-paper": "^5.12.5",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.8.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
@@ -38,7 +38,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/lodash": "^4.17.10",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "typescript": "^5.1.3"
   },
   "private": true
