--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.3.0",
+    "date-fns": "^4.1.0",
     "expo": "^52.0.9",
     "expo-status-bar": "~2.0.0",
-    "firebase": "^10.14.1",
+    "firebase": "^11.7.3",
     "lodash": "^4.17.21",
     "react": "18.3.1",
     "react-native": "0.76.2",
